package com.fernando_mulato_leider_ceron.entities;

/**
 * Appointment status enum.
 */
public enum AppointmentStatus {
    AGENDADA,   
    CONFIRMADA,   
    EN_PROGRESO,  
    COMPLETADA,    
    CANCELADA,    
    NO_ASISTIO    
}