@startuml ClassDiagram

skinparam classAttributeIconSize 0

enum AppointmentStatus <<enumeration>> #LightBlue;line:Black {
  AGENDADA,   
  CONFIRMADA,   
  EN_PROGRESO,  
  COMPLETADA,    
  CANCELADA,    
  NO_ASISTIO   
}

class Appointment <<entity>> #LightYellow;line:Black {
  -id: Long
  -patientDocument: String
  -patientName: String
  -patientPhone: String
  -professionalId: Long
  -professionalName: String
  -date: LocalDate
  -time: LocalTime
  -durationMinutes = 30: Integer
  -reason: String
  -status = AppointmentStatus.AGENDADA: AppointmentStatus
  -createdAt: LocalDateTime
  -updatedAt: LocalDateTime
}

class AppointmentDirector <<Builder>> #LightYellow;line:Black {
  -appointmentBuilder: AppointmentBuilder
  +setAppointmentBuilder(AppointmentBuilder ab): void
  +getAppointment(): Appointment  
  +buildAppointment(): void
}

class AppointmentBuilder <<Builder>> #LightYellow;line:Black {
  - Appointment : Appointment
  + getAppointment(): void
  + createNewAppointment(): void
  {abstract} + buildPatientData(): void
  {abstract} + buildProfessionalData(): void
  {abstract} + buildData(): void
  {abstract} + buildAppointmentType(): void
}

' User "1" --> "1" UserRole : "has"
' User "1" --> "1" UserStatus : "has"

Appointment "1" --> "1" AppointmentStatus : "has"
' Appointment "0..1" --> "0..1" User : "references patient"
' Appointment "0..1" --> "0..1" User : "references professional"

' note "Domain Layer: Entities" as N1

@enduml